Fixed bug #35393 (changing static protected members from outside the class, one more reference issue)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@201504 c90b9560-bf6c-de11-be94-00142212c4b1